# jax-sanghatan

./: README.md  pyproject.toml
src/sanghatan/: bench.py  flash.py  kvcache.py  mesh2d.py  mlp.py  precision.py  remat.py  shard.py  train.py  transformer.py
